# kernel

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
kernel/: Cargo.toml  build.rs  linker-x86_64.ld
kernel/src/: main.rs
kernel/src/frame_buffer/: mod.rs
kernel/src/limine_requests/: mod.rs
kernel/src/terminal/: mod.rs
kernel/src/terminal/style/: mod.rs
runner/: Cargo.toml  build.rs  limine.conf
runner/src/: main.rs
src/: lib.rs  main.rs
src/allocator/: mod.rs
src/allocator/bump/: mod.rs
src/allocator/fixed_size_block/: mod.rs
src/allocator/heap/: mod.rs
src/error/: mod.rs
src/gdt/: mod.rs
src/interrupts/: mod.rs
src/interrupts/handlers/: mod.rs
src/interrupts/idt/: mod.rs
src/interrupts/pic/: mod.rs
src/interrupts/pic/hardware_interrupts/: mod.rs
src/kernel/: mod.rs
src/kernel/debug/: mod.rs
src/memory/: mod.rs
src/panic_handler/: mod.rs
src/print/: mod.rs
src/task/: mod.rs
src/task/executor/: mod.rs
src/task/keyboard/: mod.rs
src/task/simple_executor/: mod.rs
src/task/waker/: mod.rs
src/test_runner/: mod.rs
src/vga_writer/: mod.rs
tests/: basic_boot.rs  heap_allocation.rs  stack_overflow.rs
