[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[lib]
name = "kenel_lib"

[dependencies]
bootloader = { version = "=0.9"}
vga_buffer_driver = { version = "0.1.11", git = "https://github.com/lilith-os/vga_buffer_driver", features = ["no_std"] }
lazy_static = {version = "1.5.0", features = ["spin_no_std"]}
spin = "0.10.0"